--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,19 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.NCTBBooks"
     tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-    <activity android:name=".ui.home.HomeActivity" />
+    <activity android:name=".ui.category.CategoryActivity" />
+    <activity android:name=".ui.book.BookActivity"/>
     <activity android:name=".ui.auth.SignUpActivity" />
     <activity android:name=".ui.auth.ForgotPasswordActivity" />
-    <activity android:name=".ui.auth.LoginActivity">
+    <activity android:name=".ui.auth.LoginActivity" />
+    <activity android:name=".ui.splash.SplashActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+
   </application>
 
 </manifest>
